productImages fixed on mobile devices

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -534,10 +534,16 @@ figure {
 
     img {
       width: 100%;
-      min-height: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
+
+  // .portfolio_productImages div img {
+  //   width: 100%;
+  //   min-height: 100%;
+  //   object-fit: cover;
+  // }
 
   @media (min-width: 1024px) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
